<resources>
    <string name="app_name">DiscountME</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_feed">Feed</string>
    <string name="menu_my_deals">My Deals</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="deal_name">Deal Name:</string>
    <string name="city">City:</string>
    <string name="store">Store:</string>
    <string name="branch_address">Branch Address:</string>
    <string name="description">Description:</string>
    <string name="deal_name2">Deal Name...</string>
    <string name="city_name">City...</string>
    <string name="store_name">Store Name...</string>
    <string name="address">Address...</string>
    <string name="deal">Deal</string>
    <string name="description_box">Description...</string>
    <string name="full_name">Full name:</string>
    <string name="name">Name...</string>
    <string name="email">Email...</string>
    <string name="email_text">Email:</string>
    <string name="password">Password...</string>
    <string name="password_text">Password:</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>