<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_feed"
        android:name="com.example.discountme.ui.feed.FeedFragment"
        android:label="@string/menu_feed"
        tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@+id/nav_my_deal"
        android:name="com.example.discountme.ui.my_deals.MyDealsFragment"
        android:label="@string/menu_my_deals"
        tools:layout="@layout/fragment_deal" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.discountme.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.discountme.ui.settings.SlideshowFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_add_deal" />
</navigation>