<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".view.fragments.DealDetailsFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <!--        <ProgressBar-->
        <!--            android:id="@+id/signup_progressBar2"-->
        <!--            style="?android:attr/progressBarStyle"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:indeterminate="false"-->
        <!--            android:progressTint="#934444"-->
        <!--            android:visibility="invisible"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintHorizontal_bias="0.498"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/password_profile_edit_text" />-->

<!--        <ImageView-->
<!--            android:id="@+id/image_profile"-->
<!--            android:layout_width="160dp"-->
<!--            android:layout_height="160dp"-->
<!--            android:layout_gravity="center"-->
<!--            />-->

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="Deal's Details"
            android:textAlignment="center"
            android:textColor="#0B0B0B"
            android:textSize="32sp"
            android:textStyle="bold"
            />


        <Space
            android:layout_width="wrap_content"
            android:layout_height="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="100dp"
                android:text="@string/deal_name"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <Space
                android:layout_width="12dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/deal_name_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Name..."
                android:textSize="18sp" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="100dp"
                android:layout_gravity="center"
                android:text="Offered By:"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <Space
                android:layout_width="12dp"
                android:layout_height="wrap_content" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/image_offered_by"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>

                <Space
                    android:layout_width="12dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/username_text_profile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Name..."
                    android:layout_gravity="center"
                    android:textSize="18sp" />
            </LinearLayout>



        </LinearLayout>


<!--        <Space-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="24dp" />-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->


<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:width="100dp"-->
<!--                android:text="@string/store"-->
<!--                android:textSize="18sp"-->
<!--                android:textStyle="bold"-->
<!--                app:layout_constraintBottom_toTopOf="@+id/email_profile"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->

<!--            <Space-->
<!--                android:layout_width="12dp"-->
<!--                android:layout_height="wrap_content" />-->

<!--            <TextView-->
<!--                android:id="@+id/store_name_text"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:hint="Store.."-->
<!--                android:textSize="18sp" />-->

<!--        </LinearLayout>-->


        <Space
            android:layout_width="wrap_content"
            android:layout_height="24dp" />

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->


<!--            <TextView-->
<!--                android:layout_width="100dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="City:"-->
<!--                android:textSize="18sp"-->
<!--                android:textStyle="bold"-->
<!--                app:layout_constraintBottom_toTopOf="@+id/email_profile"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->

<!--            <Space-->
<!--                android:layout_width="12dp"-->
<!--                android:layout_height="wrap_content" />-->

<!--            <TextView-->
<!--                android:id="@+id/city_text_deal"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:hint="City..."-->
<!--                android:inputType="textPersonName"-->
<!--                android:textSize="18sp" />-->

<!--        </LinearLayout>-->

<!--        <Space-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="24dp" />-->

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/email_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="4dp" />

            <TextView
                android:layout_marginStart="20dp"
                android:id="@+id/description_text_deal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:maxLines="5"
                android:minLines="5"
                android:hint="Description..."

                />

        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_deal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"

        android:clickable="true"
        android:contentDescription="@string/todo"
        android:focusable="true"
        android:src="@android:drawable/ic_menu_edit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        />

</RelativeLayout>